--- a/docs/style.css
+++ b/docs/style.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100vh;
-    background-image: url(assets/images/bg.png);
+    background-image: url(assets/images/bg.gif);
     background-position: center;
     background-size: cover;
     background-position: center;
