--- a/docs/style.css
+++ b/docs/style.css
@@ -21,14 +21,25 @@ body {
     transform: translate(-50%, -50%);
     max-width: 200%;
 	weight: 400px;
+	height: 290px;
+}
+
+#version {
+    position: relative;
+    top: 30%;
+    left: 42%;
+	color: #FFFFFF;
+	font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+    font-size: 30px;
+    max-width: 200%;
+	weight: 400px;
 	height: 300px;
 }
 
 .buttons {
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 10%;
+    left: 0%;
     width: 100%;
     display: flex;
     justify-content: center;
