--- a/docs/style.css
+++ b/docs/style.css
@@ -5,12 +5,14 @@
 }
 
 body {
-    width: 100%;
-    height: 100vh;
+    width: 200%;
+    height: 200%;
     background-image: url(assets/images/bg.gif);
     background-position: center;
     background-size: cover;
     background-position: center;
+    min-height: 100%;
+    min-widith: 100%;
     background-repeat: no-repeat;
 }
 
