--- a/docs/style.css
+++ b/docs/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    width: 200%;
-    height: 200%;
+    width: 100%;
+    height: 100%;
     background-image: url(assets/images/bg.gif);
     background-position: center;
     background-size: cover;
@@ -39,7 +39,7 @@ body {
 }
 
 .buttons {
-    position: relative,bottom;
+    position: relative;
     top: 10%;
     left: 0%;
     width: 100%;
