--- a/docs/style.css
+++ b/docs/style.css
@@ -8,9 +8,8 @@ body {
     width: 100%;
     height: 100%;
     background-image: url(assets/images/bg.gif);
-    background-position: center;
+    background-position: bottom;
     background-size: cover;
-    background-position: center;
     background-repeat: no-repeat;
 }
 
@@ -20,20 +19,20 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 200%;
-	weight: 400px;
-	height: 290px;
+    weight: 400px;
+    height: 290px;
 }
 
 #version {
     position: relative;
     top: 30%;
     left: 42%;
-	color: #FFFFFF;
-	font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+    color: #FFFFFF;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
     font-size: 30px;
     max-width: 200%;
-	weight: 400px;
-	height: 300px;
+    weight: 400px;
+    height: 300px;
 }
 
 .buttons {
