--- a/docs/style.css
+++ b/docs/style.css
@@ -34,6 +34,8 @@ body {
     max-width: 200%;
 	weight: 400px;
 	height: 300px;
+    justify-content: center;
+    align-items: center;
 }
 
 .buttons {
