--- a/docs/style.css
+++ b/docs/style.css
@@ -9,46 +9,41 @@ body {
     height: 100vh;
     background-image: url(assets/images/bg.gif);
     background-position: center;
-    background-size: auto;
+    background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;  
 }
 
 #banner {
-    position: relative;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: block;  
+	margin-left: auto;  
+	margin-right: auto;  
+	padding: 5px;  
     max-width: 200%;
     weight: 400px;
     height: 290px;
-    justify-content: center;
-    align-items: center;
 }
 
 #version {
-    position: relative;
-    top: 30%;
-    left: 42%;
     color: #FFFFFF;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
     font-size: 30px;
     max-width: 200%;
-    weight: 400px; 
+    weight: 400px;
     height: 300px;
-    justify-content: center;
-    align-items: center;
+	text-align: center;
 }
 
 .buttons {
-    position: relative;
-    top: 10%;
-    left: 0%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
+    /* width: 100%; */
+	display: block;  
+	margin-left: auto;  
+	margin-right: auto;  
+	padding: 5px;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* gap: 25px; */
+	text-align: center;
 }
 
 .download {
