--- a/docs/style.css
+++ b/docs/style.css
@@ -6,12 +6,19 @@
 
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-image: url(assets/images/bg.gif);
     background-position: center;
     background-size: cover;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;  
+	/* height: 200px; */
+	position: relative;
+	/* margin: 0; */
+	/* position: absolute; */
+	/* top: 50%; */
+	/* -ms-transform: translateY(-50%); */
+	/* transform: translateY(-50%); */
 }
 
 #banner {
@@ -20,8 +27,14 @@ body {
 	margin-right: auto;  
 	padding: 5px;  
     max-width: 200%;
-    weight: 400px;
+    /* width: 400px; */
     height: 290px;
+	/* position: absolute; */
+	/* -ms-transform: translateY(-50%); */
+	/* transform: translateY(-50%); */
+	text-align: center;
+	margin-top: 5%;
+	
 }
 
 #version {
@@ -30,7 +43,8 @@ body {
     font-size: 30px;
     max-width: 200%;
     weight: 400px;
-    height: 300px;
+    /* height: 300px; */
+	margin: 10%;
 	text-align: center;
 }
 
@@ -43,6 +57,8 @@ body {
     /* justify-content: center; */
     /* align-items: center; */
     /* gap: 25px; */
+	/* position: absolute; */
+    bottom: 0;
 	text-align: center;
 }
 
