--- a/docs/download/style2.css
+++ b/docs/download/style2.css
@@ -1,3 +1,20 @@
+body {
+    width: 200%;
+    height: 200%;
+    background-image: url(bg.gif);
+    background-position: center;
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;  
+	/* height: 200px; */
+	position: relative;
+	/* margin: 0; */
+	/* position: absolute; */
+	/* top: 50%; */
+	/* -ms-transform: translateY(-50%); */
+	/* transform: translateY(-50%); */
+}
+
 .fr-clearfix::after {
   clear: both;
   display: block;
@@ -15685,8 +15702,17 @@ html {
   font-size: 16px;
 }
 .u-body {
-  font-size: 1rem;
-  line-height: 1.6;
+	width: 100%;
+    height: 100%;
+    background-image: url(assets/images/bg.gif);
+    background-position: center;
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;  
+	/* height: 200px; */
+	position: relative;
+	font-size: 1rem;
+	line-height: 1.6;
 }
 .u-body h1,
 .u-body h2,
@@ -16337,7 +16363,15 @@ img.u-opacity-0,
 [class*="u-gray-"].u-body,
 .u-white.u-body,
 .u-black.u-body {
-  background-image: none;
+	width: 100%;
+    height: 100%;
+    background-image: url(assets/images/bg.gif);
+    background-position: center;
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;  
+	/* height: 200px; */
+	position: relative;
 }
 .u-button-style[class*="u-custom-color-"],
 .u-button-style[class*="u-palette-"],
