--- a/docs/style.css
+++ b/docs/style.css
@@ -86,6 +86,30 @@ body {
     background: #006907;
 }
 
+.docs {
+    display: inline-flex;
+    height: 75px;
+    padding: 0;
+    background: #525252;
+    border: none;
+    outline: none;
+    border-radius: 7px;
+    overflow: hidden;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    cursor: pointer;
+    text-align: center;
+}
+
+.docs:hover {
+    background: #333333;
+}
+
+.docs:active {
+    background: #212121;
+}
+
 .github {
     display: inline-flex;
     height: 75px;
