--- a/docs/download/style2.css
+++ b/docs/download/style2.css
@@ -1,11 +1,10 @@
 body {
-    width: 200%;
-    height: 200%;
-    background-image: url(bg.gif);
+    width: 100%;
+    height: 100%;
+    background-image: url(assets/images/bg.gif);
     background-position: center;
     background-size: cover;
     background-position: top;
-    background-repeat: no-repeat;  
 	/* height: 200px; */
 	position: relative;
 	/* margin: 0; */
