--- a/docs/home.css
+++ b/docs/home.css
@@ -24,7 +24,7 @@
 }
 
 .primary-button-button:hover {
-  color: 8c30f5ff;
+  color: #8c30f5ff;
   font-size: 25px;
   align-self: center;
   transition: 0.3s;
