--- a/docs/payement/buypro.css
+++ b/docs/payement/buypro.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 10vh;
   display: flex;
-  padding: var(--dl-space-space-doubleunit);
+  //padding: var(--dl-space-space-doubleunit);
   z-index: 100;
   position: relative;
   max-width: 100%;
