--- a/docs/payement/style.css
+++ b/docs/payement/style.css
@@ -1,3 +1,38 @@
+.dropbtn {
+  color: white;
+  background-color: #000000;
+  font-size: 16px;
+  border: none;
+  margin-right: 15px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {color: var(--dl-color-turquoise-default);}
+
 :root {
   --dl-color-gray-300: #d9dbe1ff;
   --dl-color-gray-700: #969babff;
