--- a/docs/index.css
+++ b/docs/index.css
@@ -107,11 +107,11 @@ index-image1:hover {
 .index-menu {
   width: 100%;
   height: 26px;
-  display: gird;
+  display: flex;
   align-self: center;
   align-items: center;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   background-color: #000000;
 }
 .index-text01 {
