--- a/docs/parteners/page2.css
+++ b/docs/parteners/page2.css
@@ -123,3 +123,9 @@
   flex-direction: column;
   justify-content: center;
 }
+
+@media(max-width: 479px) {
+ .page2-container2 {
+  flex-direction: column;
+ }
+}
